# libstandard

./: CMakeLists.txt  Doxyfile  README.md  create.sql  db.c  example.c  example2.c  example3.c  example4.c  example5.c  example6.c  file.c  gsl.c  learnings.c  libstandard.h  lognormal.c  mathematics.c  predict.c  standard.pc.in  string.c  xml.c  xpath.c
